--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@
 
 
 .aba{
-    width: 950px;
+    width: auto;
     border-radius: 15px;
     background-color: #ffffff;
     display: flex;
@@ -82,11 +82,14 @@
     font-weight: bold;
 }
 
-.forms{
+form{
+    height: 100%;
     display: flex;
-    flex-direction: column;
     justify-content: space-between;
+    flex-direction: column;
 }
+
+
 
 h2{
     font-weight: bold !important;
@@ -116,6 +119,7 @@ input::placeholder{
 .botoes{
     display: flex;
     justify-content: space-between;
+    
 }
 
 #next{
@@ -137,4 +141,6 @@ input::placeholder{
     width: 100px;
     border-style: none;
     border-radius: 8px;
+    cursor: url('/assets/images/cursor.png'), auto !important;
 }
+
