--- a/style.css
+++ b/style.css
@@ -165,6 +165,7 @@ button.option:hover{
 
 .desconto{
     visibility: hidden;
+    
     font-size: 0.9rem;
     color: hsl(243, 100%, 62%);
     height: 0;
@@ -231,7 +232,8 @@ button.option:hover{
 }
 
 .seletor input:checked + label::after{
-    left:60%
+    left:60%;
+    
 }
 
 .seletor input{
@@ -247,11 +249,54 @@ button.option:hover{
 }
 
 .checkbox{
-    border: #0E2F5B solid 1px;
+    display: flex;
+    align-items: center;
+    border: hsl(229, 24%, 87%) solid 2px;
     border-radius: 8px;
-    padding: 20px;
+    padding-inline: 20px;
+    padding: 10px;
 }
 
+.optionCheckbox label{
+    background-color: #ffffff;
+}
+.optionCheckbox input:checked{
+    background-color: #0E2F5B;
+    border-color: hsl(243, 100%, 62%);
+}
+
+
+
+
+.containerAdd{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+
+}
+
+.optionCheckbox :hover{
+    border-color: hsl(243, 100%, 62%);
+}
+
+.checkbox input{
+    height: 13px;
+    margin-inline-end: 20px;
+}
+
+.checkbox p{
+    margin: 0;
+}
+
+.checkbox label{
+    padding: 0;
+}
+
+.checkbox h3{
+    margin: 0;
+    font-size: 1.3rem;
+    font-weight: bold;
+}   
 
 #next{
     background-color: hsl(213, 96%, 18%);
@@ -264,6 +309,40 @@ button.option:hover{
 .hide{
     display: none;
 }
+
+.mostrar{
+    visibility: visible;
+    opacity: 1;
+    height: 20px;
+    transition: all 300ms ;
+    
+}
+
+.desmostrar{
+    visibility: hidden;
+    opacity: 0;
+    height: 0px;
+    transition: all 300ms;
+}
+
+
+/* Funções on css */
+
+/* para utilizar essa função como animação basta:
+    animation: mostrar 300ms; */
+
+/* @keyframes mostrar{
+    to{
+        visibility: hidden;
+        opacity: 0;
+        height: 0px;
+    }
+    from{
+        visibility: visible;
+        opacity: 1;
+        height: 20px;
+    }
+} */
 
 
 
